2024-05-04 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Release aide 0.18.7

2024-04-27 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add missing library CFLAGS

2024-04-20 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix 64-bit time_t on 32-bit architectures
	* Fix typo in aide.conf manual page (closes: #165)

2024-01-17 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix debug logging for returned attributes

2023-11-17 Mingjie Shen <shen497@purdue.edu>
	* Fix condition for error message of failing to open gzipped files

2023-08-01 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Release aide 0.18.6

2023-07-22 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Improve handling of ACL errors

2023-07-21 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix double free() during report generation (closes: #157)

2023-07-01 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Update GPG key in SECURITY.md

2023-06-30 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Release aide 0.18.5

2023-06-27 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix child directory processing on equal match (closes: #154)

2023-06-13 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Release aide 0.18.4

2023-06-12 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add missing ')' to log message
	* Fix handling of extended attributes on symlinks (closes: #156)

2023-06-03 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Remove strerror() calls from thread log messages
	* Don't require database_out for --dry-init
	* Fix static linking of the aide binary

2023-05-16 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Release aide 0.18.3

2023-05-10 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Handle readlink() errors

2023-04-07 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Release aide 0.18.2

2023-04-03 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add another missing lock for tree operations

2023-04-01 Hannes von Haugwitz <hannes@vonhaugwitz.com>